// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-truncate-beta #render should render component as expected (1) 1`] = `
<gux-truncate-beta>
  <mock:shadow-root>
    <div>
      <span class="gux-truncate-slot-container">
        <slot></slot>
      </span>
    </div>
  </mock:shadow-root>
  Some text to truncate
</gux-truncate-beta>
`;

exports[`gux-truncate-beta #render should render component as expected (2) 1`] = `
<gux-truncate-beta>
  <mock:shadow-root>
    <div>
      <span class="gux-truncate-slot-container">
        <slot></slot>
      </span>
    </div>
  </mock:shadow-root>
  <span>
    Some text to truncate in a span
  </span>
</gux-truncate-beta>
`;

exports[`gux-truncate-beta #render should render component as expected (3) 1`] = `
<gux-truncate-beta>
  <mock:shadow-root>
    <div>
      <span class="gux-truncate-slot-container">
        <slot></slot>
      </span>
    </div>
  </mock:shadow-root>
  <div>
    Div
    <span>
      with a span
    </span>
    inside
  </div>
</gux-truncate-beta>
`;

exports[`gux-truncate-beta #render should render component as expected (4) 1`] = `
<gux-truncate-beta>
  <mock:shadow-root>
    <div>
      <span class="gux-truncate-slot-container">
        <slot></slot>
      </span>
    </div>
  </mock:shadow-root>
  This is a long text that should be truncated after three lines of wrapped text
</gux-truncate-beta>
`;
